--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -142,6 +142,11 @@ button.secondary {
   background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
 }
 
+.preview-container--white {
+  background: #ffffff;
+  background-image: none;
+}
+
 .preview-image {
   max-width: 90%;
   max-height: 90%;
